# opencl_particles_engine

./: .gitignore  CMakeLists.txt  README.md
emitter/: .gitignore  CMakeLists.txt
emitter/src/: Camera.cpp  Camera.hpp  Font.cpp  Font.hpp  Grid.cpp  Grid.hpp  Kernel.cpp  Kernel.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Time.hpp  main.cpp
